--- a/BART/templates/index.html
+++ b/BART/templates/index.html
@@ -8,49 +8,17 @@
   <title>BART Dashboard with Flask</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="../static/css/styles.css">
+  
 </head>
 
 <body>
 
-  <!-- <div class="container">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>BART Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-2">
-        <div class="well">
-          <h5>SELECT Sample:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
-        </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Sample MetaData</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body"></div>
-        </div>
-      </div>
-      <div class="col-md-5">
-        <div id="pie"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div id="bubble"></div>
-    </div>
-  </div> -->
+  
 
   <div class="container">
     <div class="row">
       <div class="col-md-12 jumbotron text-center">
         <h1>BART Commuting Dashboard</h1>
-        <p>Use the dropdown menu to explore the dataset</p>
        <div class="topnav">
         <a class="active" href="/">Home</a>
         <a href="/graphs">Graphs</a>
@@ -92,8 +60,9 @@
                         <div class="col-md-12">
                           <article class = "conclusion-header">
                               <h4>Conclusions:</h4>
-                                <p>The below graphs provide information on passenger concentration for a random two-week period in 2016 based on station and time of day.</p>
-                                <p>Based on the data visualizations, we can conclude that commuting hours (8am-10am and 5-6pm) tend to the most "busy" times (i.e. largest in/out migration per station) on BART. With respect to stations, stations located in the Financia District, which is arguably the center of in/out migration activity in the city are the busiest station based on in/out migration patterns of BART passengers.</p>
+                                <p>The graphs provide information on passenger concentration for a sample two-week period (June 1-15) in 2016 based on station and time of day.</p>
+                                <p>Based on the data visualizations, we can conclude that commuting hours (7am-9am and 4pm-7pm) tend to the most "busy" times on BART. It is also evident in the map that the stations in the Financial District are the busiest stations of BART based on the number of people going in and out of BART. The busiest day per station varies between stations but weekdays tend to be more busy compared to weekends. 
+                                </p>
                           </article>
                         </div>
                       </section>
@@ -105,38 +74,28 @@
         </div>
       </div>
     </div>
-    <!-- <div class="row">
-      <div class="col-md-2">
-        <div class="well">
-          <h5>SELECT STATION:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
-        </div>
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Sample MetaData</h3>
-          </div>
-          <div id="sample-metadata" class="panel-body"></div>
-        </div> -->
-      <!-- </div>
-      <div class="col-md-5">
-        <div id="bar"></div>
+    
+    <div class="container">
+      <div id="chartjs">
+        <h3>{{ input }}</h3>
+        <!-- <h4>{{ names }}</h4> -->
       </div>
-      <div class="col-md-5">
-        <div id="map-id"></div>
       </div>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div id="pie"></div>
-    </div> -->
-  <!-- </div> -->
-
+    
+      <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+      <script>
+      let vm = new Vue({
+        el: '#chartjs',
+        data: {
+          input: 'Affectionaly made by: Charlene, Rein, Jane, Kelli, Ratan'
+        }
+      })
+  </script>
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <!-- <script src="{{ url_for('static', filename='js/bonus.js') }}"></script> -->
-  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='js/appchartjs.js') }}"></script> -->
 
 </body>
 
